--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           go-version: 1.14
 
+      - name: Install libsodium package
+        run: sudo apt update -y && sudo apt install -y libsodium-dev
+
       - name: Run test
         run:
           make test
