--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Run test
         run:
           make test
+        env:
+          GITHUB_TOKEN: $ {{ secrets.GITHUB_TOKEN }}
 
   lint:
     name: Lint
