--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,6 +35,10 @@ jobs:
       - name: Checkout code into the Go module directory
         uses: actions/checkout@v2
 
+      # https://github.com/golangci/golangci-lint/issues/1176#issuecomment-639305758
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install libsnmp-dev
+
       - name: Install Lint
         run: |
           curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.23.8
