--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install libsodium package
         run: sudo apt update -y && sudo apt install -y libsodium-dev
 
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v1
+
       - name: Run test
         run:
           make test
