using new github token instead of default github action token

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
         run:
           make test
         env:
-          GITHUB_TOKEN: $ {{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: $ {{ secrets.TESTING_TOKEN }}
 
   lint:
     name: Lint
