--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,6 +42,11 @@ jobs:
       - name: Checkout code into the Go module directory
         uses: actions/checkout@v2
 
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
+        with:
+          platform: x64
+
       # https://github.com/golangci/golangci-lint/issues/1176#issuecomment-639305758
       - name: Install dependencies
         run: sudo apt update && sudo apt install libsnmp-dev
